--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ lerna-debug.log*
 
 #Ignore vscode AI rules
 .github/copilot-instructions.md
+
+.nx/installation
+.nx/cache
+.nx/workspace-data
+
+
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
