modified:   nx.json

--- a/nx.json
+++ b/nx.json
@@ -3,5 +3,17 @@
     "version": "21.2.4"
   },
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
-  "nxCloudId": "687a67de6328f076e4959aa3"
+  "nxCloudId": "687a6f9af1adb7701cb61f95",
+  "plugins": [
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview",
+        "buildDepsTargetName": "build-deps",
+        "watchDepsTargetName": "watch-deps"
+      }
+    }
+  ]
 }
