--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:backend": "nx serve main",
+    "build:backend": "nx build main",
+    "dev:frontend": "nx serve webapp",
+    "build:frontend": "nx build webapp"
   },
   "keywords": [],
   "author": "",
@@ -35,7 +39,7 @@
     "@vitest/ui": "^3.0.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
-    "nx": "21.2.4",
+    "nx": "21.3.0",
     "prettier": "^2.6.2",
     "prisma": "6.12.0",
     "tslib": "^2.3.0",
