--- a/package.json
+++ b/package.json
@@ -18,35 +18,23 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@nx/devkit": "21.3.0",
-    "@nx/eslint": "^21.2.4",
-    "@nx/jest": "^21.2.4",
+    "@nx/eslint": "21.3.0",
+    "@nx/jest": "21.3.0",
     "@nx/js": "21.3.0",
-    "@nx/nest": "^21.2.4",
-    "@nx/node": "21.2.4",
+    "@nx/nest": "21.3.0",
+    "@nx/node": "21.3.0",
     "@nx/playwright": "21.3.0",
-    "@nx/react": "^21.3.0",
-    "@nx/vite": "^21.3.0",
+    "@nx/react": "21.3.0",
+    "@nx/vite": "21.3.0",
     "@nx/web": "21.3.0",
-    "@nx/webpack": "21.2.4",
+    "@nx/webpack": "21.3.0",
+    "nx": "21.3.0",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/ui": "^3.0.0",
-    "jiti": "2.4.2",
-    "jsdom": "~22.1.0",
-    "nx": "21.3.0",
-    "prettier": "^2.6.2",
-    "prisma": "6.12.0",
-    "tslib": "^2.3.0",
-    "typescript": "^5.8.3",
-    "vite": "^6.0.0",
-    "vitest": "^3.0.0",
-    "webpack-cli": "^5.1.4"
+    "@types/react": "19.0.0"
   },
   "nx": {},
   "dependencies": {
