--- a/package.json
+++ b/package.json
@@ -28,23 +28,28 @@
     "@nx/vite": "21.3.0",
     "@nx/web": "21.3.0",
     "@nx/webpack": "21.3.0",
-    "nx": "21.3.0",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/node": "^20.0.0",
-    "@types/react": "19.0.0"
+    "@types/react": "19.0.0",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.7.0",
+    "nx": "21.3.0",
+    "prisma": "^6.12.0",
+    "webpack-cli": "^6.0.1"
   },
   "nx": {},
   "dependencies": {
-    "@apollo/client": "^3.13.8",
+    "@graphql-tools/schema": "^10.0.24",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
+    "@urql/core": "^5.2.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
     "framer-motion": "^12.23.6",
@@ -52,6 +57,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.8.1",
+    "urql": "^4.2.2"
   }
 }
