--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@graphql-tools/schema": "^10.0.24",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.0",
