--- a/apps/backends/main/project.json
+++ b/apps/backends/main/project.json
@@ -33,6 +33,12 @@
           "buildTarget": "main:build:production"
         }
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["apps/backends/main/src/**/*.ts"]
+      }
     }
   },
   "tags": ["type:backend"]
