--- a/apps/frontends/webapp/project.json
+++ b/apps/frontends/webapp/project.json
@@ -16,6 +16,12 @@
       "options": {
         "buildTarget": "webapp:build"
       }
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["apps/frontends/webapp/src/**/*.ts", "apps/frontends/webapp/src/**/*.tsx"]
+      }
     }
   }
 }
