--- a/package.json
+++ b/package.json
@@ -35,8 +35,14 @@
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "^19.1.6",
+    "@typescript-eslint/eslint-plugin": "^8.37.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
     "nx": "21.3.0",
+    "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "webpack-cli": "^6.0.1"
   },
