--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "graphql": "^16.11.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-router-dom": "^7.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.8.1",
