modified:   .vscode/extensions.json 	deleted:    apps/backends/admin/project.json 	deleted:    apps/backends/business/project.json 	new file:   apps/frontends/dashboard-e2e/eslint.config.cjs 	new file:   apps/frontends/dashboard-e2e/playwright.config.ts 	new file:   apps/frontends/dashboard-e2e/project.json 	new file:   apps/frontends/dashboard-e2e/src/example.spec.ts 	new file:   apps/frontends/dashboard-e2e/tsconfig.json

--- a/apps/frontends/dashboard/project.json
+++ b/apps/frontends/dashboard/project.json
@@ -4,24 +4,6 @@
   "sourceRoot": "apps/frontends/dashboard/src",
   "projectType": "application",
   "tags": [],
-  "targets": {
-    "build": {
-      "executor": "@nx/vite:build",
-      "options": {
-        "outputPath": "dist/apps/frontends/dashboard"
-      }
-    },
-    "serve": {
-      "executor": "@nx/vite:serve",
-      "options": {
-        "buildTarget": "dashboard:build"
-      }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": ["apps/frontends/dashboard/src/**/*.ts", "apps/frontends/dashboard/src/**/*.tsx"]
-      }
-    }
-  }
+  "// targets": "to see all targets run: nx show project dashboard --web",
+  "targets": {}
 }
