--- a/nx.json
+++ b/nx.json
@@ -54,6 +54,13 @@
       "options": {
         "targetName": "eslint:lint"
       }
+    },
+    {
+      "plugin": "@nx/jest/plugin",
+      "options": {
+        "targetName": "test"
+      },
+      "exclude": ["apps/backends/business-e2e/**/*"]
     }
   ],
   "generators": {
