--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "^19.1.6",
@@ -54,6 +55,8 @@
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "jest": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.3.0",
@@ -61,6 +64,8 @@
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "tailwindcss": "3.4.3",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.8.2",
     "vite": "^6.0.0",
     "vitest": "^3.0.0",
