--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:backend": "nx serve main",
-    "build:backend": "nx build main",
-    "dev:frontend": "nx serve webapp",
-    "build:frontend": "nx build webapp"
+    "dev:webapp": "pnpm nx run webapp:dev",
+    "build:webapp": "pnpm nx run webapp:build",
+    "dev:main": "pnpm nx run main:serve",
+    "build:main": "pnpm nx run main:build",
+    "dev:dashboard": "pnpm nx run dashboard:dev",
+    "build:dashboard": "pnpm nx run dashboard:build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "devDependencies": {
-    "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.0",
     "@nx/devkit": "21.3.0",
     "@nx/eslint": "21.3.0",
     "@nx/jest": "21.3.0",
@@ -25,51 +25,22 @@
     "@nx/node": "21.3.0",
     "@nx/playwright": "21.3.0",
     "@nx/react": "21.3.0",
-    "@nx/vite": "21.3.0",
+    "@nx/vite": "21.3.1",
     "@nx/web": "21.3.0",
     "@nx/webpack": "21.3.0",
-    "@playwright/test": "^1.36.0",
-    "@react-router/dev": "^7.2.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/cli": "~0.6.0",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@testing-library/dom": "10.4.0",
-    "@testing-library/react": "16.1.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.37.0",
-    "@typescript-eslint/parser": "^8.37.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "@vitest/coverage-v8": "^3.0.5",
-    "@vitest/ui": "^3.0.0",
-    "autoprefixer": "10.4.13",
-    "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-playwright": "^1.6.2",
-    "eslint-plugin-prettier": "^5.5.3",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
-    "jest": "^30.0.2",
-    "jest-environment-node": "^30.0.2",
-    "jiti": "2.4.2",
-    "jsdom": "~22.1.0",
-    "nx": "21.3.0",
-    "postcss": "8.4.38",
+    "@playwright/test": "^1.44.0",
+    "@types/node": "^24.0.15",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
-    "tailwindcss": "3.4.3",
-    "ts-jest": "^29.4.0",
-    "ts-node": "10.9.1",
     "typescript": "~5.8.2",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^5.1.4",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0"
   },
   "nx": {},
   "dependencies": {
@@ -81,17 +52,16 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
+    "@react-router/dev": "7.7.0",
     "@urql/core": "^5.2.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
+    "class-validator": "^0.14.2",
     "framer-motion": "^12.23.6",
     "graphql": "^16.11.0",
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.2.0",
     "react-router-dom": "^7.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
