--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nx/webpack": "21.3.0",
     "@playwright/test": "^1.44.0",
     "@types/node": "^24.0.15",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.2.0",
@@ -38,9 +40,7 @@
     "prisma": "^6.12.0",
     "typescript": "~5.8.2",
     "vite": "^6.0.0",
-    "webpack-cli": "^5.1.4",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0"
+    "webpack-cli": "^5.1.4"
   },
   "nx": {},
   "dependencies": {
@@ -62,6 +62,7 @@
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
