--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
     "@nx/web": "21.3.0",
     "@nx/webpack": "21.3.0",
     "@playwright/test": "^1.44.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.0.15",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.21",
     "eslint-plugin-prettier": "^5.1.3",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.8.2",
     "vite": "^6.0.0",
     "webpack-cli": "^5.1.4"
