--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nx/web": "21.3.0",
     "@nx/webpack": "21.3.0",
     "@playwright/test": "^1.44.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.0.15",
     "@types/react": "^19.0.0",
@@ -37,6 +38,7 @@
     "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.46",
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -44,11 +46,14 @@
     "tailwindcss": "^4.1.11",
     "typescript": "~5.8.2",
     "vite": "^6.0.0",
-    "webpack-cli": "^5.1.4"
+    "vite-plugin-pwa": "^1.0.1",
+    "webpack-cli": "^5.1.4",
+    "workbox-window": "^7.3.0"
   },
   "nx": {},
   "dependencies": {
     "@graphql-tools/schema": "^10.0.24",
+    "@heroicons/react": "^2.2.0",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.2",
@@ -57,6 +62,7 @@
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
     "@react-router/dev": "7.7.0",
+    "@types/leaflet": "^1.9.20",
     "@urql/core": "^5.2.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
@@ -64,13 +70,19 @@
     "framer-motion": "^12.23.6",
     "graphql": "^16.11.0",
     "isbot": "^4.4.0",
+    "leaflet": "^1.9.4",
     "react": "19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-qr-reader": "3.0.0-beta-1",
     "react-router-dom": "^7.7.0",
+    "react-use": "^17.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.8.1",
-    "urql": "^4.2.2"
+    "urql": "^4.2.2",
+    "zustand": "^5.0.6"
   }
 }
