new file:   1 	new file:   2 	modified:   apps/frontends/webapp/index.html 	modified:   apps/frontends/webapp/src/index.css 	modified:   apps/frontends/webapp/src/main.tsx 	modified:   apps/frontends/webapp/src/pages/GamesPage.tsx

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev:main": "pnpm nx run main:serve",
     "build:main": "pnpm nx run main:build",
     "dev:dashboard": "pnpm nx run dashboard:dev",
-    "build:dashboard": "pnpm nx run dashboard:build"
+    "build:dashboard": "pnpm nx run dashboard:build",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
