--- a/package.json
+++ b/package.json
@@ -54,6 +54,10 @@
   },
   "nx": {},
   "dependencies": {
+    "react-router-dom": "^6.23.1",
+    "@trpc/client": "^10.45.0",
+    "@trpc/react-query": "^10.45.0",
+    "@tanstack/react-query": "^4.36.1",
     "@graphql-tools/schema": "^10.0.24",
     "@heroicons/react": "^2.2.0",
     "@nestjs/apollo": "^13.1.0",
