modified:   .gitignore 	modified:   apps/backends/main/project.json 	modified:   apps/backends/main/webpack.config.js

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,14 @@ lerna-debug.log*
 .github/instructions/nx.instructions.md
 vite.config.*.timestamp*
 vitest.config.*.timestamp*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
