--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "devDependencies": {
+    "@apollo/gateway": "^2.11.2",
+    "@apollo/subgraph": "^2.11.2",
+    "@as-integrations/fastify": "^2.1.1",
+    "@eslint/js": "^9.9.0",
+    "@nestjs/microservices": "^11.1.5",
+    "@nestjs/websockets": "^11.1.5",
     "@nx/devkit": "21.3.0",
     "@nx/eslint": "21.3.0",
     "@nx/jest": "21.3.0",
@@ -33,20 +39,33 @@
     "@playwright/test": "^1.44.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^24.0.15",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.21",
+    "bufferutil": "^4.0.9",
+    "class-transformer": "^0.5.1",
     "daisyui": "^5.0.46",
+    "eslint": "^9.9.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "lovable-tagger": "^1.1.7",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
     "tailwindcss": "^4.1.11",
+    "ts-loader": "^9.5.2",
+    "ts-morph": "^26.0.0",
     "typescript": "~5.8.2",
+    "typescript-eslint": "^8.0.1",
+    "utf-8-validate": "^6.0.5",
     "vite": "^6.0.0",
     "vite-plugin-pwa": "^1.0.1",
     "webpack-cli": "^5.1.4",
@@ -54,12 +73,9 @@
   },
   "nx": {},
   "dependencies": {
-    "react-router-dom": "^6.23.1",
-    "@trpc/client": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
-    "@tanstack/react-query": "^4.36.1",
     "@graphql-tools/schema": "^10.0.24",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.0",
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.2",
@@ -67,28 +83,75 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
+    "@radix-ui/react-context-menu": "^2.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.4",
     "@react-router/dev": "7.7.0",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.0",
+    "@trpc/react-query": "^10.45.0",
     "@types/leaflet": "^1.9.20",
     "@urql/core": "^5.2.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
     "class-validator": "^0.14.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.23.6",
     "graphql": "^16.11.0",
+    "input-otp": "^1.2.4",
     "isbot": "^4.4.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.462.0",
+    "next-themes": "^0.3.0",
     "react": "19.0.0",
     "react-confetti": "^6.4.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-qr-reader": "3.0.0-beta-1",
-    "react-router-dom": "^7.7.0",
+    "react-resizable-panels": "^2.1.3",
+    "react-router-dom": "^6.23.1",
     "react-use": "^17.6.0",
+    "recharts": "^2.12.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
     "urql": "^4.2.2",
+    "vaul": "^0.9.3",
+    "zod": "^3.23.8",
     "zustand": "^5.0.6"
   }
 }
