--- a/apps/frontends/dashboard/package.json
+++ b/apps/frontends/dashboard/package.json
@@ -5,15 +5,15 @@
   "scripts": {},
   "sideEffects": false,
   "dependencies": {
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
+    "@react-router/node": "7.7.0",
+    "@react-router/serve": "7.7.0",
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "7.7.0"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.2.0",
+    "@react-router/dev": "7.7.0",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0"
