--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "T4G-Tag4Gift",
+  "name": "t4g-tag4gift",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,17 +25,17 @@
     "@eslint/js": "^9.9.0",
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/websockets": "^11.1.5",
-    "@nx/devkit": "21.3.0",
-    "@nx/eslint": "21.3.0",
-    "@nx/jest": "21.3.0",
-    "@nx/js": "21.3.0",
-    "@nx/nest": "21.3.0",
-    "@nx/node": "21.3.0",
-    "@nx/playwright": "21.3.0",
-    "@nx/react": "21.3.0",
-    "@nx/vite": "21.3.1",
-    "@nx/web": "21.3.0",
-    "@nx/webpack": "21.3.0",
+    "@nx/devkit": "21.3.3",
+    "@nx/eslint": "21.3.3",
+    "@nx/jest": "21.3.3",
+    "@nx/js": "21.3.3",
+    "@nx/nest": "21.3.3",
+    "@nx/node": "21.3.3",
+    "@nx/playwright": "21.3.3",
+    "@nx/react": "21.3.3",
+    "@nx/vite": "21.3.3",
+    "@nx/web": "21.3.3",
+    "@nx/webpack": "21.3.3",
     "@playwright/test": "^1.44.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
@@ -50,6 +50,7 @@
     "autoprefixer": "^10.4.21",
     "bufferutil": "^4.0.9",
     "class-transformer": "^0.5.1",
+    "cross-env": "^7.0.3",
     "daisyui": "^5.0.46",
     "eslint": "^9.9.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -57,6 +58,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
+    "nx": "^21.3.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
@@ -140,7 +142,7 @@
     "react-leaflet": "^5.0.0",
     "react-qr-reader": "3.0.0-beta-1",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^6.23.1",
+    "react-router-dom": "^7.7.0",
     "react-use": "^17.6.0",
     "recharts": "^2.12.7",
     "reflect-metadata": "^0.1.13",
