--- a/apps/backends/main/project.json
+++ b/apps/backends/main/project.json
@@ -5,25 +5,42 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/webpack:webpack",
+      "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
-        "command": "cd apps/backends/main && pnpm exec webpack-cli build",
-        "args": ["--node-env=production"]
+        "target": "node",
+        "compiler": "tsc",
+        "outputPath": "dist/apps/backends/main",
+        "main": "apps/backends/main/src/main.ts",
+        "tsConfig": "apps/backends/main/tsconfig.app.json",
+        "assets": [],
+        "webpackConfig": "apps/backends/main/webpack.config.js"
       },
       "configurations": {
         "development": {
-          "args": ["--node-env=development"]
+          "optimization": false,
+          "extractLicenses": false,
+          "inspect": false
+        },
+        "production": {
+          "optimization": true,
+          "extractLicenses": true,
+          "inspect": false,
+          "fileReplacements": [
+            {
+              "replace": "apps/backends/main/src/environments/environment.ts",
+              "with": "apps/backends/main/src/environments/environment.prod.ts"
+            }
+          ]
         }
       }
     },
     "serve": {
-      "continuous": true,
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
-      "dependsOn": ["build"],
       "options": {
-        "buildTarget": "main:build",
-        "runBuildTargetDependencies": false
+        "buildTarget": "main:build"
       },
       "configurations": {
         "development": {
@@ -33,13 +50,6 @@
           "buildTarget": "main:build:production"
         }
       }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "options": {
-        "lintFilePatterns": ["apps/backends/main/src/**/*.ts"]
-      }
     }
-  },
-  "tags": ["type:backend"]
+  }
 }
