--- a/apps/backends/main/tsconfig.app.json
+++ b/apps/backends/main/tsconfig.app.json
@@ -3,15 +3,11 @@
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "types": ["node"],
-    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "target": "es2021",
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "strictBindCallApply": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "target": "es2015"
   },
-  "include": ["src/**/*.ts", "../../../prisma/prisma.service.ts"]
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
+  "include": ["src/**/*"]
 }
