new file:   apps/frontends/webapp/.gitignore 	deleted:    apps/frontends/webapp/src/components/LeaderboardSection copy.tsx 	new file:   apps/frontends/webapp/src/components/ui/buttonVariants.ts

--- a/apps/frontends/webapp/project.json
+++ b/apps/frontends/webapp/project.json
@@ -12,7 +12,7 @@
       }
     },
     "serve": {
-      "executor": "@nx/vite:serve",
+      "executor": "@nx/vite:dev-server",
       "options": {
         "buildTarget": "webapp:build"
       }
