modified:   apps/backends/main/src/app/games/types.ts

--- a/apps/backends/main/tsconfig.app.json
+++ b/apps/backends/main/tsconfig.app.json
@@ -6,7 +6,9 @@
     "moduleResolution": "NodeNext",
     "types": ["node"],
     "emitDecoratorMetadata": true,
-    "target": "es2015"
+    "target": "es2015",
+    "composite": true,
+    "declaration": true
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
   "include": ["src/**/*"]
