--- a/apps/backends/main/tsconfig.json
+++ b/apps/backends/main/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "extends": "../../../tsconfig.base.json",
   "files": [],
-  "include": [],
+  "include": ["src"],
   "references": [
     {
       "path": "./tsconfig.app.json"
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "module": "NodeNext"
   }
 }
