--- a/apps/frontends/webapp/tsconfig.app.json
+++ b/apps/frontends/webapp/tsconfig.app.json
@@ -25,5 +25,5 @@
     "src/**/*.spec.jsx",
     "src/**/*.test.jsx"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx", "../dashboard/src/components/CreateChallengeForm.tsx"]
 }
