--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
   },
   "nx": {},
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@graphql-tools/schema": "^10.0.24",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
@@ -84,6 +85,8 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
     "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -134,6 +137,8 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "react": "19.0.0",
     "react-confetti": "^6.4.0",
     "react-day-picker": "^8.10.1",
