--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "utf-8-validate": "^6.0.5",
     "vite": "^6.0.0",
     "vite-plugin-pwa": "^1.0.1",
+    "vitest": "^3.2.4",
     "webpack-cli": "^5.1.4",
     "workbox-window": "^7.3.0"
   },
@@ -124,6 +125,7 @@
     "@urql/core": "^5.2.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -137,6 +139,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "ol": "^10.6.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "react": "19.0.0",
