--- a/apps/backends/main/tsconfig.app.json
+++ b/apps/backends/main/tsconfig.app.json
@@ -3,13 +3,21 @@
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "types": ["node"],
+    "types": ["node", "vitest"],
+    "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "target": "es2015",
+    "target": "es2021",
     "composite": true,
     "declaration": true
   },
-  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*.ts",
+    "../../../../prisma/prisma.service.ts",
+    "../../../../libs/prisma/src/prisma.service.ts",
+    "../../../../libs/prisma/src/**/*.ts",
+    "../../../../prisma/**/*.ts",
+    "../../../prisma/prisma.service.ts",
+    "../../../libs/prisma/src/prisma.service.ts"
+  ],
+  "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
