--- a/builder.config.json
+++ b/builder.config.json
@@ -1,5 +1,5 @@
 {
-  "command": "pnpm start",
+  "command": "pnpm dev",
   "serverUrl": "http://localhost:4200",
   "authenticateProxy": false,
   "commitMode": "commits"
