modified:   apps/frontends/webapp/src/pages/HomePage.tsx 	deleted:    apps/frontends/webapp/src/styles.css 	new file:   apps/frontends/webapp/src/styles/global.css

--- a/apps/frontends/webapp/tsconfig.json
+++ b/apps/frontends/webapp/tsconfig.json
@@ -1,19 +1,24 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "outDir": "dist",
+    "module": "esnext",
+    "target": "esnext",
     "jsx": "react-jsx",
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "types": ["vite/client"],
-    "module": "NodeNext"
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "files": [],
-  "include": [],
+  "include": ["src"],
   "references": [
     {
       "path": "./tsconfig.app.json"
     }
-  ],
-  "extends": "../../../tsconfig.base.json"
+  ]
 }
