deleted:    apps/frontends/webapp/src/components.json

--- a/apps/frontends/webapp/tsconfig.app.json
+++ b/apps/frontends/webapp/tsconfig.app.json
@@ -13,7 +13,8 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "composite": true
   },
   "exclude": [
     "src/**/*.spec.ts",
@@ -25,5 +26,5 @@
     "src/**/*.spec.jsx",
     "src/**/*.test.jsx"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx", "../dashboard/src/components/CreateChallengeForm.tsx"]
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
 }
