--- a/apps/frontends/webapp/package.json
+++ b/apps/frontends/webapp/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3"
+    "@radix-ui/react-slot": "^1.2.3",
+    "embla-carousel-react": "^8.6.0"
   }
 }
