--- a/package.json
+++ b/package.json
@@ -92,6 +92,8 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-router/dev": "7.7.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.0",
