--- a/package.json
+++ b/package.json
@@ -76,6 +76,11 @@
     "workbox-window": "^7.3.0"
   },
   "nx": {},
+  "pnpm": {
+    "overrides": {
+      "stylus@0.0.1-security": "0.64.0"
+    }
+  },
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
@@ -94,6 +99,7 @@
     "@prisma/client": "6.12.0",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-router/dev": "7.7.0",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.0",
