--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:webapp": "pnpm nx run webapp:dev",
-    "build:webapp": "pnpm nx run webapp:build",
-    "dev:main": "pnpm nx run main:serve",
-    "build:main": "pnpm nx run main:build",
-    "dev:dashboard": "pnpm nx run dashboard:dev",
-    "build:dashboard": "pnpm nx run dashboard:build",
+    "dev:webapp": "npx nx run webapp:dev",
+    "build:webapp": "npx nx run webapp:build",
+    "dev:main": "npx nx run main:serve",
+    "build:main": "npx nx run main:build",
+    "dev:dashboard": "npx nx run dashboard:dev",
+    "build:dashboard": "npx nx run dashboard:build",
     "prisma:generate": "prisma generate",
     "prisma:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.12.4",
   "devDependencies": {
-    "@apollo/gateway": "^2.11.2",
-    "@apollo/subgraph": "^2.11.2",
     "@as-integrations/fastify": "^2.1.1",
     "@eslint/js": "^9.9.0",
     "@nestjs/microservices": "^11.1.5",
@@ -52,13 +49,11 @@
     "bufferutil": "^4.0.9",
     "class-transformer": "^0.5.1",
     "cross-env": "^7.0.3",
-    "daisyui": "^5.0.46",
     "eslint": "^9.9.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "lovable-tagger": "^1.1.7",
     "nx": "^21.3.3",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
@@ -76,16 +71,12 @@
     "workbox-window": "^7.3.0"
   },
   "nx": {},
-  "pnpm": {
-    "overrides": {
-      "stylus@0.0.1-security": "0.64.0"
-    }
+  "overrides": {
+    "stylus": "0.64.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.13.8",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@graphql-tools/schema": "^10.0.24",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@nestjs/apollo": "^13.1.0",
@@ -101,12 +92,12 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-router/dev": "7.7.0",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
+    "@tanstack/react-query": "^5.59.0",
+    "@trpc/client": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
+    "@trpc/server": "^11.4.3",
     "@types/leaflet": "^1.9.20",
     "@urql/core": "^5.2.0",
-    "apollo-server-express": "^3.13.0",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.2",
@@ -117,7 +108,6 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
     "framer-motion": "^12.23.6",
-    "graphql": "^16.11.0",
     "input-otp": "^1.2.4",
     "isbot": "^4.4.0",
     "leaflet": "^1.9.4",
