--- a/package.json
+++ b/package.json
@@ -86,11 +86,13 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@prisma/client": "6.12.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@react-router/dev": "7.7.0",
     "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-router": "^1.130.12",
+    "@tanstack/router-devtools": "^1.130.13",
+    "@tanstack/router-plugin": "^1.130.15",
     "@trpc/client": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
@@ -123,7 +125,6 @@
     "react-leaflet": "^5.0.0",
     "react-qr-reader": "3.0.0-beta-1",
     "react-resizable-panels": "^2.1.3",
-    "react-router-dom": "^7.7.0",
     "react-use": "^17.6.0",
     "recharts": "^2.12.7",
     "reflect-metadata": "^0.1.13",
