--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-# Ignore generated GraphQL schema
-.generated/
 # Nestjs specific
 /dist
 /node_modules
 /build
 /tmp
+
+# Prisma migrations
+/packages/database/prisma/migrations
 
 # Logs
 logs
