--- a/nx.json
+++ b/nx.json
@@ -1,11 +1,38 @@
 {
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "installation": {
     "version": "21.3.0"
   },
-  "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "nxCloudId": "687a6f9af1adb7701cb61f95",
+  "parallel": 4,
+  "defaultBase": "main",
   "watch": {
-    "ignored": ["dist/**", "out-tsc/**", "dist/apps/backends/main/**"]
+    "ignored": [
+      "dist/**",
+      "out-tsc/**", 
+      "dist/apps/backends/main/**",
+      "apps/backends/main/.generated",
+      "apps/backends/main/logs",
+      "apps/backends/main/cache",
+      ".nx/cache",
+      "node_modules"
+    ]
+  },
+  "namedInputs": {
+    "default": ["{projectRoot}/**/*", "sharedGlobals"],
+    "production": [
+      "default",
+      "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?",
+      "!{projectRoot}/tsconfig.spec.json",
+      "!{projectRoot}/jest.config.[jt]s",
+      "!{projectRoot}/src/test-setup.[jt]s",
+      "!{projectRoot}/test-setup.[jt]s",
+      "!{projectRoot}/.eslintrc.json",
+      "!{projectRoot}/eslint.config.js"
+    ],
+    "sharedGlobals": [
+      "{workspaceRoot}/.github/workflows/ci.yml"
+    ]
   },
   "plugins": [
     {
@@ -19,7 +46,7 @@
       }
     },
     {
-      "plugin": "@nx/react/router-plugin",
+      "plugin": "@nx/react/plugin",
       "options": {
         "buildTargetName": "build",
         "devTargetName": "dev",
@@ -46,13 +73,14 @@
     {
       "plugin": "@nx/playwright/plugin",
       "options": {
-        "targetName": "e2e"
+        "targetName": "e2e",
+        "ciTargetName": "e2e-ci"
       }
     },
     {
       "plugin": "@nx/eslint/plugin",
       "options": {
-        "targetName": "eslint:lint"
+        "targetName": "lint"
       }
     },
     {
@@ -63,12 +91,46 @@
       "exclude": ["apps/backends/business-e2e/**/*"]
     }
   ],
+  "targetDefaults": {
+    "build": {
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"],
+      "cache": true
+    },
+    "test": {
+      "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
+      "cache": true
+    },
+    "lint": {
+      "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/eslint.config.js"],
+      "cache": true
+    },
+    "e2e": {
+      "inputs": ["default", "^production"],
+      "cache": true
+    },
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    },
+    "@nx/webpack:webpack": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    },
+    "@nx/vite:build": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    }
+  },
   "generators": {
     "@nx/react": {
       "application": {
         "babel": true,
         "style": "css",
-        "linter": "none",
+        "linter": "eslint",
         "bundler": "vite"
       },
       "component": {
@@ -76,9 +138,17 @@
       },
       "library": {
         "style": "css",
-        "linter": "none"
+        "linter": "eslint"
+      }
+    },
+    "@nx/js": {
+      "library": {
+        "buildable": true
       }
     }
+  },
+  "cli": {
+    "packageManager": "npm"
   },
   "tasksRunnerOptions": {
     "default": {
@@ -86,20 +156,11 @@
       "options": {
         "cacheableOperations": [
           "build",
-          "lint",
+          "lint", 
           "test",
-          "e2e"
-        ],
-        "watch": {
-          "exclude": [
-            "apps/backends/main/.generated",
-            "apps/backends/main/logs",
-            "apps/backends/main/cache",
-            ".nx/cache",
-            "dist",
-            "node_modules"
-          ]
-        }
+          "e2e",
+          "typecheck"
+        ]
       }
     }
   }
