modified:   .vscode/mcp.json 	modified:   nx.json 	modified:   package.json 	modified:   packages/ui-web/project.json 	modified:   tsconfig.base.json

--- a/nx.json
+++ b/nx.json
@@ -35,61 +35,11 @@
     ]
   },
   "plugins": [
-    {
-      "plugin": "@nx/webpack/plugin",
-      "options": {
-        "buildTargetName": "build",
-        "serveTargetName": "serve",
-        "previewTargetName": "preview",
-        "buildDepsTargetName": "build-deps",
-        "watchDepsTargetName": "watch-deps"
-      }
-    },
-    {
-      "plugin": "@nx/react/plugin",
-      "options": {
-        "buildTargetName": "build",
-        "devTargetName": "dev",
-        "startTargetName": "start",
-        "watchDepsTargetName": "watch-deps",
-        "buildDepsTargetName": "build-deps",
-        "typecheckTargetName": "typecheck"
-      }
-    },
-    {
-      "plugin": "@nx/vite/plugin",
-      "options": {
-        "buildTargetName": "build",
-        "testTargetName": "test",
-        "serveTargetName": "serve",
-        "devTargetName": "dev",
-        "previewTargetName": "preview",
-        "serveStaticTargetName": "serve-static",
-        "typecheckTargetName": "typecheck",
-        "buildDepsTargetName": "build-deps",
-        "watchDepsTargetName": "watch-deps"
-      }
-    },
-    {
-      "plugin": "@nx/playwright/plugin",
-      "options": {
-        "targetName": "e2e",
-        "ciTargetName": "e2e-ci"
-      }
-    },
-    {
-      "plugin": "@nx/eslint/plugin",
-      "options": {
-        "targetName": "lint"
-      }
-    },
-    {
-      "plugin": "@nx/jest/plugin",
-      "options": {
-        "targetName": "test"
-      },
-      "exclude": ["apps/backends/business-e2e/**/*"]
-    }
+    "@nx/webpack/plugin",
+    "@nx/vite/plugin",
+    "@nx/playwright/plugin",
+    "@nx/eslint/plugin",
+    "@nx/jest/plugin"
   ],
   "targetDefaults": {
     "build": {
@@ -126,21 +76,6 @@
     }
   },
   "generators": {
-    "@nx/react": {
-      "application": {
-        "babel": true,
-        "style": "css",
-        "linter": "eslint",
-        "bundler": "vite"
-      },
-      "component": {
-        "style": "css"
-      },
-      "library": {
-        "style": "css",
-        "linter": "eslint"
-      }
-    },
     "@nx/js": {
       "library": {
         "buildable": true
@@ -158,8 +93,7 @@
           "build",
           "lint", 
           "test",
-          "e2e",
-          "typecheck"
+          "e2e"
         ]
       }
     }
