--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
     "@eslint/js": "^9.9.0",
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/websockets": "^11.1.5",
-    "@nx/devkit": "21.3.3",
-    "@nx/eslint": "21.3.3",
-    "@nx/jest": "21.3.3",
-    "@nx/js": "21.3.3",
-    "@nx/nest": "21.3.3",
-    "@nx/node": "21.3.3",
-    "@nx/playwright": "21.3.3",
-    "@nx/react": "21.3.3",
-    "@nx/vite": "21.3.3",
-    "@nx/web": "21.3.3",
-    "@nx/webpack": "21.3.3",
+    "@nx/devkit": "^21.3.11",
+    "@nx/eslint": "^21.3.11",
+    "@nx/jest": "^21.3.11",
+    "@nx/js": "^21.3.11",
+    "@nx/nest": "^21.3.11",
+    "@nx/node": "^21.3.11",
+    "@nx/playwright": "^21.3.11",
+    "@nx/react": "^21.3.11",
+    "@nx/vite": "^21.3.11",
+    "@nx/web": "^21.3.11",
+    "@nx/webpack": "^21.3.11",
+    "@nx/workspace": "^21.3.11",
     "@playwright/test": "^1.44.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
