modified:   apps/backends/main/src/app/challenges/challenge.service.ts 	modified:   apps/backends/main/src/app/games/games.service.ts 	modified:   apps/backends/main/src/app/share/share.service.ts 	modified:   apps/backends/main/src/app/tags/tag.service.ts 	modified:   apps/backends/main/src/app/tenants/tenant.service.ts 	modified:   apps/backends/main/src/app/trpc/trpc.controller.ts

--- a/apps/frontends/webapp/tsconfig.json
+++ b/apps/frontends/webapp/tsconfig.json
@@ -12,7 +12,9 @@
     "types": ["vite/client"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@t4g/types": ["../../../packages/types/src/index.ts"],
+      "@t4g/auth-users": ["../../../packages/auth-users/src/index.ts"]
     }
   },
   "include": ["src"],
