--- a/apps/frontends/dashboard/tsconfig.json
+++ b/apps/frontends/dashboard/tsconfig.json
@@ -6,7 +6,16 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "types": ["vite/client", "vitest", "@react-router/node"],
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@t4g/types": ["../../../packages/types/src/index.ts"],
+      "@t4g/auth-business": ["../../../packages/auth-business/src/index.ts"],
+      "@t4g/database": ["../../../packages/database/src/index.ts"],
+      "@t4g/shared": ["../../../packages/shared/src/index.ts"],
+      "@t4g/ui-web": ["../../../packages/ui-web/src/index.ts"]
+    }
   },
   "files": [],
   "include": [],
