--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "tailwindcss": "^4.1.11",
     "ts-loader": "^9.5.2",
     "ts-morph": "^26.0.0",
+    "tslib": "^2.8.1",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.0.1",
     "utf-8-validate": "^6.0.5",
@@ -87,6 +88,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
+    "@nx/rollup": "^21.3.11",
     "@prisma/client": "6.12.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.5",
@@ -134,7 +136,6 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tslib": "^2.8.1",
     "tw-animate-css": "^1.3.6",
     "urql": "^4.2.2",
     "vaul": "^0.9.3",
