--- a/packages/auth-business/package.json
+++ b/packages/auth-business/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@t4g/auth-business",
   "version": "0.0.1",
-  "type": "commonjs",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts"
+  "type": "module",
+  "main": "./src/index.tsx",
+  "types": "./src/index.tsx"
 }
