--- a/packages/auth-business/tsconfig.json
+++ b/packages/auth-business/tsconfig.json
@@ -6,7 +6,11 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "allowSyntheticDefaultImports": true
   },
   "files": [],
   "include": [],
