--- a/apps/frontends/webapp/tsconfig.app.json
+++ b/apps/frontends/webapp/tsconfig.app.json
@@ -8,7 +8,10 @@
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "exclude": [
     "src/**/*.spec.ts",
