--- a/apps/frontends/webapp/tsconfig.json
+++ b/apps/frontends/webapp/tsconfig.json
@@ -15,7 +15,14 @@
     "paths": {
       "@/*": ["src/*"],
       "@t4g/types": ["../../../packages/types/src/index.ts"],
-      "@t4g/auth-users": ["../../../packages/auth-users/src/index.ts"]
+      "@t4g/auth-users": ["../../../packages/auth-users/src/index.ts"],
+      "@t4g/ui-web": ["../../../packages/ui-web/src/index.ts"],
+      "@t4g/ui-web/card": ["../../../packages/ui-web/src/components/ui/card.tsx"],
+      "@t4g/ui-web/avatar": ["../../../packages/ui-web/src/components/ui/avatar.tsx"],
+      "@t4g/ui-web/tabs": ["../../../packages/ui-web/src/components/ui/tabs.tsx"],
+      "@t4g/ui-web/separator": ["../../../packages/ui-web/src/components/ui/separator.tsx"],
+      "@t4g/ui-web/badge": ["../../../packages/ui-web/src/components/ui/badge.tsx"],
+      "@t4g/ui-web/button": ["../../../packages/ui-web/src/components/ui/button.tsx"]
     }
   },
   "include": ["src"],
