--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.15",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
