modified:   apps/backends/business/src/app/gift/gift.service.ts

--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "build:main": "npx nx run main:build",
     "dev:dashboard": "npx nx run dashboard:dev",
     "build:dashboard": "npx nx run dashboard:build",
+    "dev:business": "npx nx run business:serve",
+    "build:business": "npx nx run business:build",
+    "dev:mobile": "npx nx run mobile:dev",
+    "build:mobile": "npx nx run mobile:build",
+    "dev:admin": "npx nx run admin:dev",
+    "build:admin": "npx nx run admin:build",
     "prisma:generate": "prisma generate --schema=packages/database/schema.prisma",
     "prisma:studio": "prisma studio"
   },
@@ -29,7 +35,7 @@
     "@nx/nest": "^21.3.11",
     "@nx/node": "^21.3.11",
     "@nx/playwright": "^21.3.11",
-    "@nx/react": "^21.3.11",
+    "@nx/react": "21.3.11",
     "@nx/vite": "^21.3.11",
     "@nx/web": "^21.3.11",
     "@nx/webpack": "^21.3.11",
@@ -56,7 +62,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "nx": "^21.3.3",
+    "nx": "21.3.11",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prisma": "^6.12.0",
@@ -117,6 +123,7 @@
     "framer-motion": "^12.23.6",
     "input-otp": "^1.2.4",
     "isbot": "^4.4.0",
+    "jwks-rsa": "^3.2.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
