--- a/apps/frontends/webapp/tsconfig.json
+++ b/apps/frontends/webapp/tsconfig.json
@@ -14,21 +14,30 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@t4g/types": ["../../../packages/types/src/index.ts"],
-      "@t4g/auth-users": ["../../../packages/auth-users/src/index.ts"],
-      "@t4g/ui-web": ["../../../packages/ui-web/src/index.ts"],
-      "@t4g/ui-web/card": ["../../../packages/ui-web/src/components/ui/card.tsx"],
-      "@t4g/ui-web/avatar": ["../../../packages/ui-web/src/components/ui/avatar.tsx"],
-      "@t4g/ui-web/tabs": ["../../../packages/ui-web/src/components/ui/tabs.tsx"],
-      "@t4g/ui-web/separator": ["../../../packages/ui-web/src/components/ui/separator.tsx"],
-      "@t4g/ui-web/badge": ["../../../packages/ui-web/src/components/ui/badge.tsx"],
-      "@t4g/ui-web/button": ["../../../packages/ui-web/src/components/ui/button.tsx"]
+      "@t4g/types": ["../../../dist/out-tsc/packages/types/src/index.d.ts"],
+      "@t4g/ui-web": ["../../../dist/out-tsc/packages/ui-web/src/index.d.ts"],
+      "@t4g/ui-web/utils": ["../../../dist/out-tsc/packages/ui-web/src/lib/utils.d.ts"],
+      "@t4g/ui-web/card": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/card.d.ts"],
+      "@t4g/ui-web/avatar": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/avatar.d.ts"],
+      "@t4g/ui-web/tabs": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/tabs.d.ts"],
+      "@t4g/ui-web/separator": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/separator.d.ts"],
+      "@t4g/ui-web/badge": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/badge.d.ts"],
+      "@t4g/ui-web/button": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/button.d.ts"],
+      "@t4g/ui-web/toast": ["../../../dist/out-tsc/packages/ui-web/src/components/ui/toast.d.ts"],
+      "@t4g/ui-web/use-toast": ["../../../dist/out-tsc/packages/ui-web/src/hooks/use-toast.d.ts"],
+      "@t4g/auth-users": ["../../../dist/out-tsc/packages/auth-users/src/index.d.ts"]
     }
   },
-  "include": ["src"],
+  "include": [
+    "src",
+    "../../../packages/ui-web/src/**/*.ts",
+    "../../../packages/ui-web/src/**/*.tsx",
+    "../../../packages/types/src/**/*.ts"
+  ],
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    }
+    { "path": "./tsconfig.app.json" },
+    { "path": "../../../packages/ui-web/tsconfig.json" },
+    { "path": "../../../packages/auth-users/tsconfig.json" },
+    { "path": "../../../packages/types/tsconfig.json" }
   ]
 }
