--- a/nx.json
+++ b/nx.json
@@ -3,13 +3,13 @@
   "installation": {
     "version": "21.3.0"
   },
-  "nxCloudId": "687a6f9af1adb7701cb61f95",
+  "nxCloudId": "6891f0e91f4d342ea67a6ebd",
   "parallel": 4,
   "defaultBase": "main",
   "watch": {
     "ignored": [
       "dist/**",
-      "out-tsc/**", 
+      "out-tsc/**",
       "dist/apps/backends/main/**",
       "apps/backends/main/.generated",
       "apps/backends/main/logs",
@@ -30,16 +30,25 @@
       "!{projectRoot}/.eslintrc.json",
       "!{projectRoot}/eslint.config.js"
     ],
-    "sharedGlobals": [
-      "{workspaceRoot}/.github/workflows/ci.yml"
-    ]
+    "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
   "plugins": [
     "@nx/webpack/plugin",
     "@nx/vite/plugin",
     "@nx/playwright/plugin",
     "@nx/eslint/plugin",
-    "@nx/jest/plugin"
+    "@nx/jest/plugin",
+    {
+      "plugin": "@nx/react/router-plugin",
+      "options": {
+        "buildTargetName": "build",
+        "devTargetName": "dev",
+        "startTargetName": "start",
+        "watchDepsTargetName": "watch-deps",
+        "buildDepsTargetName": "build-deps",
+        "typecheckTargetName": "typecheck"
+      }
+    }
   ],
   "targetDefaults": {
     "build": {
@@ -52,7 +61,11 @@
       "cache": true
     },
     "lint": {
-      "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/eslint.config.js"],
+      "inputs": [
+        "default",
+        "{workspaceRoot}/.eslintrc.json",
+        "{workspaceRoot}/eslint.config.js"
+      ],
       "cache": true
     },
     "e2e": {
@@ -73,6 +86,38 @@
       "cache": true,
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
+    },
+    "dev:webapp": {
+      "outputs": ["{projectRoot}/webapp dev"],
+      "cache": true
+    },
+    "build:webapp": {
+      "outputs": ["{projectRoot}/webapp build"],
+      "cache": true
+    },
+    "dev:main": {
+      "outputs": ["{projectRoot}/main dev"],
+      "cache": true
+    },
+    "build:main": {
+      "outputs": ["{projectRoot}/main build"],
+      "cache": true
+    },
+    "dev:dashboard": {
+      "outputs": ["{projectRoot}/dashboard dev"],
+      "cache": true
+    },
+    "build:dashboard": {
+      "outputs": ["{projectRoot}/dashboard build"],
+      "cache": true
+    },
+    "prisma:generate": {
+      "outputs": ["{projectRoot}/prisma generate"],
+      "cache": true
+    },
+    "prisma:studio": {
+      "outputs": ["{projectRoot}/prisma studio"],
+      "cache": true
     }
   },
   "generators": {
@@ -89,12 +134,7 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": [
-          "build",
-          "lint", 
-          "test",
-          "e2e"
-        ]
+        "cacheableOperations": ["build", "lint", "test", "e2e"]
       }
     }
   }
