--- a/packages/auth-users/package.json
+++ b/packages/auth-users/package.json
@@ -2,6 +2,6 @@
   "name": "@t4g/auth-users",
   "version": "0.0.1",
   "type": "commonjs",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts"
+  "main": "../../dist/packages/auth-users/src/index.js",
+  "types": "../../dist/packages/auth-users/src/index.d.ts"
 }
