--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "composite": true,
+    "declaration": true,
     "module": "NodeNext",
     "moduleResolution": "NodeNext"
   },
   "files": [],
-  "include": [],
+  "include": ["src/**/*.ts"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
