--- a/packages/types/tsconfig.lib.json
+++ b/packages/types/tsconfig.lib.json
@@ -1,8 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "composite": true,
     "declaration": true,
+    "outDir": "../../dist/out-tsc",
     "types": ["node"]
   },
   "include": ["src/**/*.ts"],
