--- a/packages/auth-shared/tsconfig.lib.json
+++ b/packages/auth-shared/tsconfig.lib.json
@@ -6,8 +6,11 @@
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "composite": true
+    "composite": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   },
-  "include": ["src/**/*.ts"],
+  "jsx": "react-jsx",
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
