--- a/packages/auth-shared/package.json
+++ b/packages/auth-shared/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@t4g/auth-shared",
   "version": "0.1.0",
-  "main": "src/t4g-auth0-config.ts",
-  "types": "src/t4g-auth0-config.ts",
+  "main": "dist/packages/auth-shared/src/t4g-auth0-config.js",
+  "types": "dist/packages/auth-shared/src/t4g-auth0-config.d.ts",
   "license": "MIT"
 }
