--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ vite.config.*.timestamp*
 vitest.config.*.timestamp*
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
 .idea
 .DS_Store
