--- a/packages/ui-web/tsconfig.lib.json
+++ b/packages/ui-web/tsconfig.lib.json
@@ -4,7 +4,7 @@
     "composite": true,
     "declaration": true,
     "declarationMap": true,
-    "outDir": "../../dist/out-tsc",
+  "outDir": "./dist",
     "types": ["node", "@nx/react/typings/cssmodule.d.ts", "@nx/react/typings/image.d.ts"]
   },
   "files": [
@@ -18,5 +18,5 @@
     "src/**/*.spec.tsx",
     "src/**/*.test.tsx"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src"]
 }
